--- a/templates/maven/Jenkinsfile
+++ b/templates/maven/Jenkinsfile
@@ -37,7 +37,7 @@ pipeline {
           when {
             beforeAgent true
             anyOf {
-              branch 'master'
+              branch 'main'
               branch 'pr-*'
             }
           }
@@ -69,7 +69,7 @@ pipeline {
         stage ('Test') {
           when {
             anyOf {
-              branch 'master'
+              branch 'main'
               branch 'pr-*'
             }
           }
@@ -87,7 +87,7 @@ pipeline {
         stage ('Deliver') {
           when {
             beforeAgent true
-            branch 'master'
+            branch 'main'
           }
           steps {
             container ('maven') {
