--- a/templates/casc-bundle/Jenkinsfile
+++ b/templates/casc-bundle/Jenkinsfile
@@ -1,4 +1,4 @@
-@Library('pipeline-library@master') _
+library 'pipeline-library'
 pipeline {
   agent none
   options {
@@ -10,7 +10,7 @@ pipeline {
     stage('Update Config Bundle') {
       when {
         beforeAgent true
-        branch 'master'
+        branch 'main'
       }
       steps {
         configBundleUpdate()
