--- a/templates/container-build/template.yaml
+++ b/templates/container-build/template.yaml
@@ -32,4 +32,10 @@ multibranch:
             strategyId: 1
         - gitHubPullRequestDiscovery:
             strategyId: 1
+    strategy:
+      allBranchesSame:
+        props:
+        - suppressAutomaticTriggering:
+            triggeredBranchesRegex: .*
+            strategy: INDEXING
   markerFile: Dockerfile
