--- a/templates/casc-bundle/Jenkinsfile
+++ b/templates/casc-bundle/Jenkinsfile
@@ -4,6 +4,7 @@ pipeline {
   options {
     buildDiscarder(logRotator(numToKeepStr: '2'))
     timeout(time: 10, unit: 'MINUTES')
+    skipDefaultCheckout true
   }
   stages {
     stage('Publish CasC Bundle Update Event') {
@@ -14,11 +15,10 @@ pipeline {
       }
       environment { CASC_UPDATE_SECRET = credentials('casc-update-secret') }
       steps {
-        gitHubParseOriginUrl()
         publishEvent event:jsonEvent("""
           {
-            'controller':{'name':'${BUNDLE_ID}','action':'casc_bundle_update','bundle_id':'${BUNDLE_ID}'},
-            'github':{'organization':'${GITHUB_ORG}','repository':'${GITHUB_REPO}'},
+            'controller':{'name':'${CASC_BUNDLE_ID}','action':'casc_bundle_update','bundle_id':'${CASC_BUNDLE_ID}'},
+            'github':{'organization':'${repoOwner}','repository':'${repository}'},
             'secret':'${CASC_UPDATE_SECRET}',
             'casc':{'auto_reload':'false'}
           }
