--- a/templates/casc-bundle/template.yaml
+++ b/templates/casc-bundle/template.yaml
@@ -33,6 +33,8 @@ multibranch:
             strategyId: 1
             trust:
               $class: TrustPermission
+        - headWildcardFilter:
+            includes: main
         - cloudBeesSCMReporting:
             handlers:
             - endBuildError:
