--- a/templates/casc-bundle/template.yaml
+++ b/templates/casc-bundle/template.yaml
@@ -35,3 +35,9 @@ multibranch:
               $class: TrustPermission
         - headWildcardFilter:
             includes: main PR-*
+    strategy:
+      allBranchesSame:
+        props:
+        - suppressAutomaticTriggering:
+            triggeredBranchesRegex: ^(?!PR-).*$
+            strategy: INDEXING
