--- a/templates/casc-bundle/template.yaml
+++ b/templates/casc-bundle/template.yaml
@@ -7,10 +7,11 @@ parameters:
   - name: repoOwner
     type: string
     displayName: GitHub Organization
+    defaultValue: REPLACE_GITHUB_ORG
   - name: repository
     type: string
     displayName: GitHub Repository
-    defaultValue: cloudbees-ci-config-bundle
+    defaultValue: controller
   - name: githubCredentialId
     displayName: GitHub Credential ID
     type: CREDENTIALS
