--- a/templates/casc-bundle/Jenkinsfile
+++ b/templates/casc-bundle/Jenkinsfile
@@ -17,7 +17,7 @@ pipeline {
             'controller':{'name':'${CASC_BUNDLE_ID}','action':'casc_bundle_update','bundle_id':'${CASC_BUNDLE_ID}'},
             'github':{'organization':'${repoOwner}','repository':'${repository}'},
             'secret':'${CASC_UPDATE_SECRET}',
-            'casc':{'auto_reload':'false'}
+            'casc':{'auto_reload':'true'}
           }
         """), verbose: true
       }
