--- a/templates/container-build/Jenkinsfile
+++ b/templates/container-build/Jenkinsfile
@@ -16,21 +16,26 @@ pipeline {
     GITHUB_CREDENTIAL_ID = "${githubCredentialId}"
   }
   stages {
-    stage('Build and Push Container Image') {
-      when {
-        beforeAgent true
-        anyOf {
-          branch 'pr-*'
-          triggeredBy 'EventTriggerCause'
-        }
-      }
-      steps {  
-        echo "building and pushing container image for ${REPO_OWNER}/${REPO_NAME}"
-        containerBuildPushGeneric(REPO_NAME) {
-          checkout scm
-          gitShortCommit()
+    stage('Pull Request') {
+      stages {
+        stage('Build and Push Container Image') {
+          when {
+            beforeAgent true
+            anyOf {
+              branch 'pr-*'
+              triggeredBy 'EventTriggerCause'
+            }
+          }
+          steps {  
+            echo "building and pushing container image for ${REPO_OWNER}/${REPO_NAME}"
+            containerBuildPushGeneric(REPO_NAME) {
+              checkout scm
+              gitShortCommit()
+            }
+          }
         }
       }
     }
+    
   }
 }
